# meshprobe

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
docs/: implementation-status.md  plan.md  session-cli-plan.md
docs/issue-63-screen-edges/: README.md  metrics.json
docs/issue-63-screen-edges/mitigation/: metrics.json
evals/curated/: catalog.json
evals/manifests/private/: private.json
evals/manifests/public/: nightly.json  pull_request.json  release.json  smoke.json
evals/reports/clean-install-v4/: clean-install-report.json
evals/reports/clean-install-v4/qualification/smoke/: qualification-report.json  qualification-report.md
evals/reports/clean-install-v6/: clean-install-report.json
evals/reports/clean-install-v6/qualification/smoke/: qualification-report.json  qualification-report.md
memory/: MEMORY.md  mypy-debt-parallel-burndown.md  private-corpus-location.md  usage.jsonl
src/meshprobe/: __init__.py  __main__.py  artifacts.py  blender_discovery.py  camera.py  cli.py  client.py  contact_sheet.py  controller.py  daemon.py  identity.py  mcp_server.py  models.py  protocol.py  selectors.py  service.py  session.py  sources.py  workspace.py
src/meshprobe/blender/: __init__.py  curated_builder.py  worker.py
src/meshprobe/evals/: __init__.py  curated.py  curated_build.py  curated_tasks.py  ergonomics.py  factory.py  generators.py  geometry.py  leakage.py  migration.py  oracles.py  reference_agent.py  reports.py  schemas.py  tiers.py  variants.py
src/meshprobe/evals/harness/: __init__.py  adapters.py  attempts.py  broker.py  replay.py  runner.py  sandbox.py  suite.py  windows_sandbox.py
tests/: conftest.py
tests/golden/: test_default_illumination.py  test_render_goldens.py
tests/integration/: test_blender_import.py  test_blender_smoke.py  test_eval_models.py  test_reference_agent_runtime.py  test_windows_blender_discovery.py
tests/property/: test_camera_properties.py
tests/safety/: test_source_immutability.py
tests/unit/: test_artifacts.py  test_blender_discovery.py  test_blender_worker.py  test_camera_fit.py  test_cli.py  test_client.py  test_compare_edge_renders.py  test_contact_sheet.py  test_controller.py  test_daemon.py  test_eval_adapters.py  test_eval_broker.py  test_eval_curated.py  test_eval_factory.py  test_eval_generators.py  test_eval_geometry.py  test_eval_migration.py  test_eval_oracles.py  test_eval_replay.py  test_eval_reports.py  test_eval_runner.py  test_eval_sandbox.py  test_eval_schemas.py  test_eval_suite.py  test_eval_tiers.py  test_mcp_server.py  test_models.py  test_protocol.py  test_reference_agent.py  test_runtime_support.py  test_selectors.py  test_service.py  test_session.py  test_sources.py  test_workspace.py
tools/: clean_install_smoke.py  compare_edge_renders.py  generate_curated_catalog.py
