[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshprobe"
version = "0.1.0.dev0"
description = "Read-only 3D model inspection tools for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Pedro Paulo Vezza Campos", email = "pedro@vezza.com.br" },
]
dependencies = [
  "pydantic>=2.11,<3",
  "typer>=0.16,<1",
]

[project.scripts]
meshprobe = "meshprobe.cli:app"

[dependency-groups]
dev = [
  "hypothesis>=6.135,<7",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meshprobe"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["meshprobe"]
omit = ["src/meshprobe/blender/worker.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["meshprobe"]
