[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshprobe"
version = "1.0.0"
description = "Read-only 3D model inspection tools for AI agents"
readme = "README.md"
# Python 3.12 is deliberate: PEP 695 ``type`` aliases in artifacts.py, models.py,
# protocol.py, and evals/harness/adapters.py do not parse on older interpreters.
# Python 3.10 also lacks the ``Self`` and ``StrEnum`` APIs used throughout src/.
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Pedro Paulo Vezza Campos", email = "pedro@vezza.com.br" },
]
dependencies = [
  "mcp>=1.27,<2",
  "pillow>=12.1,<13",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
  "typer>=0.16,<1",
]

[project.scripts]
meshprobe = "meshprobe.cli:app"
meshprobe-mcp = "meshprobe.mcp_server:main"

[dependency-groups]
dev = [
  "hypothesis>=6.135,<7",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.12,<1",
  "types-pyyaml>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meshprobe"]

[tool.hatch.build.targets.sdist]
exclude = ["/memory"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["meshprobe"]
patch = ["subprocess"]
omit = [
  "src/meshprobe/client.py",
  "src/meshprobe/daemon.py",
  "src/meshprobe/blender/curated_builder.py",
  "src/meshprobe/blender/worker.py",
  "src/meshprobe/evals/reference_agent.py",
  "src/meshprobe/evals/ergonomics.py",
  "src/meshprobe/evals/harness/windows_sandbox.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["meshprobe"]
